--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: python
 python:
   - "2.7"
 # command to run tests
-script: python exploit.py ctf07.root-me.org 21
+script:
+  - ping -c 3 ctf01.root-me.org
+  - python exploit.py ctf01.root-me.org 21
