--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python
+sudo: required
 python:
   - "2.7"
 # command to run tests
 script:
   - ping -c 3 ctf01.root-me.org
-  - python exploit.py ctf01.root-me.org 21
+  - sudo python exploit.py ctf01.root-me.org 21
